--- a/app/views/explan_card.scala.html
+++ b/app/views/explan_card.scala.html
@@ -1,13 +1,16 @@
 @import extendedsldnf.datastructure.Explanation
 @(explan: Explanation, index: Int)
-
+<dd data-generation="@explan.getGenOrder()" data-quality="@(1-explan.getQuality())"  data-length="@explan.size()" data-depth="@explan.getRulesEvidencesCount()" data-cost="@explan.getCost().getTotalCost()" class="explan-card">
 <div class="card border-dark m-1">
     <div class="card-header">
         <div class="row">
             <div class="col-md-4">
                 <h5>Explanation #@{index + 1}</h5>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-2">
+                <h6> @("%.3f".format(explan.getQuality())) </h6>
+                            </div>
+            <div class="col-md-6">
                 <div class="btn-group btn-group-sm pull-right" role="group" aria-label="feedback">
                     <button type="button" class="btn btn-success ">Relevant</button>
                     <button type="button" class="btn btn-warning">Semi-Relevant</button>
@@ -17,7 +20,6 @@
             </div>
         </div>
     </div>
-
     <div class="card-body ">
 
         @*<h5 class="card-title">Explanation #@{*@
@@ -104,3 +106,4 @@
         @*<a href="#" class="card-link">Second link</a>*@
     </div>
 </div>
+</dd>
