--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,12 +20,16 @@
         <link rel='stylesheet' href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")'>
         @*<link rel='stylesheet' href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap-theme.css")'>*@
 
-        <link rel="stylesheet" font-src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-        @*<link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")' type="text/css">*@
+        @*<link rel="stylesheet" font-src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">*@
+        <link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/web-fonts-with-css/css/fontawesome.css")' type="text/css">
+
 
 
         <link rel="stylesheet" media="screen" style-src="@routes.Assets.versioned("stylesheets/theme.css")" type="text/css">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+
+        <script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>
+        <script data-main="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" type="text/javascript" src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" ></script>
 
     </head>
     <body>
@@ -54,10 +58,10 @@
         @content
 
 
-
-        <script script-src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script script-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-        <script script-src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        @*<script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>*@
+        @*<script script-src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>*@
+        @*<script script-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>*@
+        @*<script script-src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>*@
 
 
 
