--- a/app/views/explain_form.scala.html
+++ b/app/views/explain_form.scala.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-12">
                 <form class="text-center justify-content-center" method="post" action="@routes.ExplainController.explain()">
-                    <div class="py-2">
+                    <div class="py-3 px-0">
                         @*<div class="container">*@
                         <div class="form-row justify-content-center align-baseline">
                             <div class="form-group col-md-3">
