--- a/app/views/explans.scala.html
+++ b/app/views/explans.scala.html
@@ -1,7 +1,7 @@
 @import extendedsldnf.datastructure.IQueryExplanations
 @import web.data.Query
 @(query:Query, explanations: IQueryExplanations)
-<div class="py-2">
+<div class="py-2 px-0">
 
     <div class="container">
         @if(explanations!=null) {
