--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,28 +34,54 @@
     </head>
     <body>
 
-            <div class="py-2">
-                <div class="container">
-                    <div class="row">
+        <div class="py-1">
+            <div class="container-fluid">
+                <div class="row vertical-divider">
+                    <div class="col-md-3" id="logo_ops_div">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3 class="display-3 text-center">TRuFact!</h3>
+                                <p  autocomplete="off" style="">
+                                    Explaining facts using Text, Rules and Knowledge Graph!</p>
+                            </div>
+                        </div>
                         <div class="col-md-12">
-                            <h1 class="display-3 text-center">TRuFact!</h1>
+                            Options
                         </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-md-12 text-center" style="">
-                            <p class="lead" autocomplete="off" style="">
-                                Explaining facts using Text, Rules and Knowledge Graph!</p>
-                        </div>
+                    </div>
+                    <div class="col-md-9" id="content_div">
+                        @content
                     </div>
 
                 </div>
             </div>
 
 
+        </div>
+
+
+
+            @*<div class="py-0">*@
+                @*<div class="container">*@
+
+
+                    @*<div class="row">*@
+                        @*<div class="col-md-12 text-center" style="">*@
+
+                        @*</div>*@
+                    @*</div>*@
+
+                @*</div>*@
+            @*</div>*@
+
+
+
+
+
         @* And here's where we render the `Html` object containing
         * the page content. *@
-        @content
+
 
 
         @*<script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>*@
