--- a/app/views/explain_form.scala.html
+++ b/app/views/explain_form.scala.html
@@ -31,10 +31,7 @@
                                             <a href="#1" data-toggle="tab" class="nav-link active">Rules</a>
                                         </li>
                                         <li class="nav-item"><a href="#2" data-toggle="tab" class="nav-link" >
-                                            Resources</a>
-                                        </li>
-                                        <li class="nav-item"><a href="#3" data-toggle="tab" class="nav-link">
-                                            More Options</a>
+                                            Dictionary</a>
                                         </li>
                                     </ul>
 
@@ -46,18 +43,10 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="2">
-                                            <p> Options of the Text and KG and included and excluded facts</p>
-                                            <h3>Knowledge Graph</h3>
-
-                                            <h3>Text</h3>
+                                            <p> Dictionary for predicates</p>
 
                                         </div>
 
-                                        <div class="tab-pane" id="3">
-                                            <p> Other options</p>
-
-
-                                        </div>
 
                                     </div>
                                 </div>
