--- a/public/stylesheets/theme.scss
+++ b/public/stylesheets/theme.scss
@@ -92,8 +92,22 @@ body > * {
   }
 
 
-  .vertical-divider{
-    clear: both;
-    position: relative;
-  }
+
+}
+
+.row.vdivide [class*='col-']:not(:last-child):after {
+  background: #e0e0e0;
+  width: 1px;
+  content: "";
+  display:block;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  right: 0;
+  min-height: 70px;
+}
+
+
+.state-icon {
+  left: -5px;
 }
