--- a/app/views/explans.scala.html
+++ b/app/views/explans.scala.html
@@ -58,7 +58,7 @@
 *@
         <div class="col-md-12">
             <label for="sorting-group">Sort by:</label>
-                <div id="sorting-group" class="btn-group pull-right" data-toggle="buttons">
+                <div id="sorting-group" class="btn-group justify-content-end" data-toggle="buttons">
                     <label class="btn btn-light active">
                         <input type="radio" name="generation" id="option1" autocomplete="off" checked class="sorting"> Generation
                     </label>
