--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,18 +21,24 @@
         @*<link rel='stylesheet' href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap-theme.css")'>*@
 
         @*<link rel="stylesheet" font-src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">*@
-        <link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/web-fonts-with-css/css/fontawesome.css")' type="text/css">
+        @*<link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/css/fontawesome.css")' type="text/css">*@
+        <link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/css/all.css")' type="text/css">
+
+        @*<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/switch.css")' type="text/css">*@
 
 
-
-        @*<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/theme.css")" >*@
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/theme.scss")" >
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
-        <script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>
-        <script data-main="@routes.Assets.versioned("lib/popper.js/dist/popper.js")" type="text/javascript" src="@routes.Assets.versioned("lib/popper.js/dist/popper.js")" ></script>
 
+        <script data-main="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")" ></script>
         <script data-main="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" type="text/javascript" src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" ></script>
-        <script data-main="@routes.Assets.versioned("javascripts/checkboxes.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/checkboxes.js")" ></script>
+
+        <script data-main="@routes.Assets.versioned("lib/popper.js/popper.js")" type="text/javascript" src="@routes.Assets.versioned("lib/popper.js/popper.js")" ></script>
+
+        @*<script data-main="@routes.Assets.versioned("javascripts/checkboxes.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/checkboxes.js")" ></script>*@
+
+
 
 
     @*<script>*@
@@ -61,18 +67,20 @@
 @*</script>*@
 
 
+
     </head>
     <body>
 
         <div class="py-1">
             <div class="container-fluid">
                 <div class="row vdivide">
+                    <!--Options Dive -->
                     <div class="col-md-3" id="logo_ops_div">
                         <div class="row">
                             <div class="col-md-12">
-                                <h4 class="display-3 text-center">TRuFact!</h4>
+                                <h4 class="display-4 text-center">ExFaKT!</h4>
                                 <p  autocomplete="off" style="">
-                                    Explaining facts using Text, Rules and Knowledge Graph!</p>
+                                    Explaining facts over Knowledge Graph and Text!</p>
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -80,6 +88,8 @@
                         </div>
 
                     </div>
+
+                    <!-- Content-->
                     <div class="col-md-9" id="content_div">
                         @content
                     </div>
