--- a/app/views/explan_card.scala.html
+++ b/app/views/explan_card.scala.html
@@ -5,10 +5,10 @@
     <div class="card-header card-header-sm">
         <div class="row">
             <div class="col-sm">
-                <h5>Explanation #@{index + 1}</h5>
+                <h6 class="small">Explanation #@{index + 1}</h6>
             </div>
             <div class="col-sm align-self-end text-right">
-                <h6> Quality: @("%.3f".format(explan.getQuality())) </h6>
+                <small>Quality: @("%.3f".format(explan.getQuality()))</small>
                             </div>
             @*<div class="col-md-6">*@
                 @*<div class="btn-group btn-group-sm justify-content-end" role="group" aria-label="feedback">*@
@@ -41,25 +41,45 @@
                         @for((node, eviIndex) <- explan.getVerificationEvidences().zipWithIndex) {
                             @if(node.getSourceActionType().toString().startsWith("TEXT")) {
 
-                                <div class="list-group-item justify-content-between" ><strong><em>@node.getReadableQuery().toString()</em></strong>
-                                    <a class="badge badge-pill badge-warning" data-toggle="collapse" href="#textE@{index}-@{eviIndex}">Source:Text </a>
+                                <!-- <div class="list-group-item d-flex justify-content-between align-items-center" > -->
+                                <div class="list-group-item" >
+                                    <div class="row m-0">
+                                            <div class="col-sm self-align-start">
+                                            <strong><em>@node.getReadableQuery().toString()</em></strong>
+                                        </div>
+                                        <div class="col-sm self-align-end text-right">
+                                            <a class="badge badge-pill badge-warning self-align-end" data-toggle="collapse" href="#textE@{index}-@{eviIndex}">Source:Text </a>
+                                        </div>
+                                   </div>
+                                    <div class="row">
+                                        <div class="panel-collapse collapse" id="textE@{index}-@{eviIndex}">
+                                            <em>Text Evidences:</em>
+                                            <lu>
+                                            @for(doc<-node.getTextResults().getEvidence().getDocuments()){
+                                                <li>(<a href="@doc.getUrl()">@doc.getTitle()</a>) @doc.getText()</li>
 
-                                    <div class="panel-collapse collapse" id="textE@{index}-@{eviIndex}">
-                                        <em>Text Evidences:</em>
-                                        <lu>
-                                        @for(doc<-node.getTextResults().getEvidence().getDocuments()){
-                                            <li>(<a href="@doc.getUrl()">@doc.getTitle()</a>) @doc.getText()</li>
-
-                                        }
-                                        </lu>
+                                            }
+                                            </lu>
 
 
+                                        </div>
                                     </div>
-
                                 </div>
                             }else{
-                                <div class="list-group-item"><strong><em>@node.getReadableQuery().toString()</em></strong>
-                                    <a class="badge badge-pill badge-success">Source: KG Fact</a>
+                                <div class="list-group-item d-flex justify-content-between align-items-center">
+
+                                    @*<div class="row">*@
+                                        @*<div class="col-sm self-align-start">*@
+                                            <strong><em>@node.getReadableQuery().toString()</em></strong>
+                                        @*</div>*@
+                                        @*<div class="col-sm self-align-end text-right">*@
+                                            <a class="badge badge-pill badge-success">Source: KG</a>
+
+                                        @*</div>*@
+                                    @*</div>*@
+
+
+
                                 </div>
                             }
 
