--- a/app/views/explan_card.scala.html
+++ b/app/views/explan_card.scala.html
@@ -5,7 +5,7 @@
     <div class="card-header card-header-sm">
         <div class="row">
             <div class="col-sm">
-                <h6 class="small">Explanation #@{index + 1}</h6>
+                <h6>Explanation #@{index + 1}</h6>
             </div>
             <div class="col-sm align-self-end text-right">
                 <small>Quality: @("%.3f".format(explan.getQuality()))</small>
